--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <section class="headline">
+      <div class="catch">
+        <div><p>#1 Editors choice App of 2020</p></div>
+        <div>
+          <h1>Some catchy Line</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Dignissimos reiciendis fugiat quisquam deserunt quo velit rem
+            obcaecati, ducimus debitis quod expedita, iure magnam! Possimus
+            accusamus vel atque delectus nostrum debitis.
+          </p>
+        </div>
+        <div><button>Try for Free</button></div>
+      </div>
+      <div class="demo">
+        <div><img src="" alt="Demo Screenshot" /></div>
+        <div>
+          <h2>Definitely a Demo</h2>
+          <p>WBS Coding School</p>
+        </div>
+        <div><button>Continue</button></div>
+      </div>
+    </section>
+  </body>
 </html>
