--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
         <div><button>Continue</button></div>
       </div>
     </section>
+    <section class="trustcomp">
+      <div><p>Trusted by companies like</p></div>
+      <div class="trustcomp_logo">
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+      </div>
+    </section>
   </body>
 </html>
