--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@
         <img src="" alt="" />
       </div>
     </section>
+    <section class="video">
+        <div><h1>Check out our Video:</h1></div>
+        <div><video src=""></video></div>
+    </section>
   </body>
 </html>
