oksana features bl 5

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="styles.css">
->>>>>>> 028738d694fa3986c25ef05b97eb92d510889fc6
-</head>
+
 <body>
-    
+    <section id="offer" class="section 5">
+        <h2>What we offer</h2>
+        <p>Short-stay and long-stay pet hotel: from a few hours to several weeks. Safe Clean Supervised</p>
+        <div class="servises">
+            <h3>Our servises</h3>
+            <ul>
+                <li>Daycare & Overnight boarding</li>
+                <li>Transport & Quarantine support</li>
+                <li>Grooming & Basic care</li>
+                <li>Playtime & Socialization </li>
+                <li>Medication Administration</li>
+                <li>Training</li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
