--- a/index.html
+++ b/index.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-<<<<<<< HEAD
-=======<header>
-  <div class="pawtel-logo">PAWTEL</div>
-  <nav>
-    <a href="#about">About Us</a>
-    <a href="#services">Our Services</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<!-- Main content here -->
+  <header>
+    <div class="pawtel-logo">PAWTEL</div>
+    <nav>
+      <a href="#about">About Us</a>
+      <a href="#services">Our Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-</head>
-<body>
+  <!-- Main content here -->
 
+  <body></body>
 
-
-
-    
-    
-</body>
-
-<footer>
-  &copy; 2025 PAWTEL Pet Hotel.
-  <a href="#privacy">Privacy Policy</a>
-</footer>
-
-    <link rel="stylesheet" href="styles.css">
->>>>>>> 028738d694fa3986c25ef05b97eb92d510889fc6
+  <footer>
+    &copy; 2025 PAWTEL Pet Hotel.
+    <a href="#privacy">Privacy Policy</a>
+  </footer>
 </html>
