oksana features with css

--- a/index.html
+++ b/index.html
@@ -9,16 +9,46 @@
 <body>
     <section id="offer" class="section 5">
         <h2>What we offer</h2>
-        <p>Short-stay and long-stay pet hotel: from a few hours to several weeks. Safe Clean Supervised</p>
-        <div class="servises">
+        <p class="subtitle">Short-stay and long-stay pet hotel: from a few hours to several weeks. <br><span class="subtitle-two">Safe Clean Supervised</span></p>
+        <div class="services">
             <h3>Our servises</h3>
             <ul>
-                <li>Daycare & Overnight boarding</li>
-                <li>Transport & Quarantine support</li>
-                <li>Grooming & Basic care</li>
-                <li>Playtime & Socialization </li>
-                <li>Medication Administration</li>
-                <li>Training</li>
+                <li>
+                <figure class="service-card">
+                    <figcaption class="servise-title">Daycare & Overnight boarding</figcaption>
+                    <div class="circle">🦦</div>
+                </figure>
+                </li>
+                <li>
+                <figure class="service-card">
+                    <figcaption class="servise-title">Transport & Quarantine support</figcaption>
+                    <div class="circle">🚕</div>
+                </figure>
+                </li>
+                <li>
+                <figure class="service-card">
+                    <figcaption class="servise-title">Playtime & Socialization</figcaption>
+                    <div class="circle">🏐</div>
+                </figure>
+                </li>
+                <li>
+                <figure class="service-card">
+                    <figcaption class="servise-title">Medication Administration</figcaption>
+                    <div class="circle">🚑</div>
+                </figure>
+                </li>
+                <li>
+                <figure class="service-card">
+                    <figcaption class="servise-title">Grooming & Basic care</figcaption>
+                    <div class="circle">✄</div>
+                </figure>
+                </li>
+                <li>
+                <figure class="service-card">
+                    <figcaption class="servise-title">Training</figcaption>
+                    <div class="circle">🏅</div>
+                </figure>
+                </li>
             </ul>
         </div>
     </section>
