oksana why-block with css

--- a/index.html
+++ b/index.html
@@ -52,5 +52,57 @@
             </ul>
         </div>
     </section>
+    <section id="why-us" class="section">
+        <h2>Why choose us?</h2>
+        <ul class="why-list">
+            <li class="why-card">
+            <img src="images/online-booking.jpg" alt="Online booking" class="why-img">
+            <div class="why-text">
+                <h3>Online booking</h3>
+                <p>Book and manage services anytime through our website or mobile app.</p>
+            </div>
+            </li>
+
+            <li class="why-card">
+            <img src="images/flexible-feeding.jpg" alt="Flexible feeding" class="why-img">
+            <div class="why-text">
+                <h3>Flexible feeding</h3>
+                <p>Choose between standard or natural BARF nutrition, tailored to your pet’s needs.</p>
+            </div>
+            </li>
+
+            <li class="why-card">
+            <img src="images/monitoring.jpg" alt="24/7 monitoring" class="why-img">
+            <div class="why-text">
+                <h3>24/7 monitoring</h3>
+                <p>Round-the-clock care and live camera access for owners.</p>
+            </div>
+            </li>
+
+            <li class="why-card">
+            <img src="images/care-plans.jpg" alt="Individual care plans" class="why-img">
+            <div class="why-text">
+                <h3>Individual care plans</h3>
+                <p>Special programs for puppies, seniors, and pets with medical conditions.</p>
+            </div>
+            </li>
+
+            <li class="why-card">
+            <img src="images/pickup.jpg" alt="Pick-up & Drop-off" class="why-img">
+            <div class="why-text">
+                <h3>Pick-up & Drop-off</h3>
+                <p>Convenient transport service to bring your pet safely to and from the hotel.</p>
+            </div>
+            </li>
+
+            <li class="why-card">
+            <img src="images/emergency.jpg" alt="Emergency support" class="why-img">
+            <div class="why-text">
+                <h3>Emergency support</h3>
+                <p>Cooperation with veterinary clinics to provide immediate medical help if needed.</p>
+            </div>
+            </li>
+        </ul>
+     </section>
 </body>
 </html>
