oksana prices with css

--- a/index.html
+++ b/index.html
@@ -104,5 +104,35 @@
             </li>
         </ul>
      </section>
+     <section id="discounts" class="section">
+        <h2>Special discounts for bundled services</h2>
+        <div class="discounts-grid">
+
+            <div class="discount-card">
+                <img src="images/discount1.jpg" alt="Bundle A">
+                <div class="slab">
+                    <div class="price">$15</div>
+                    <div class="features">Trial: daycare + grooming</div>
+                </div>
+            </div>
+
+            <div class="discount-card">
+                <img src="images/discount2.jpg" alt="Bundle B">
+                <div class="slab">
+                    <div class="price">$49</div>
+                    <div class="features">Monthly: feeding + monitoring</div>
+                </div>
+            </div>
+
+            <div class="discount-card">
+                <img src="images/discount3.jpg" alt="Bundle C">
+                <div class="slab">
+                    <div class="price">$9</div>
+                    <div class="features">Hotel + vet + 24/7 support</div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
