--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-    <header>
+  <header>
     <div class="pawtel-logo">PAWTEL</div>
     <nav>
       <a href="#about">About Us</a>
@@ -49,141 +49,189 @@
       </div>
     </section>
     <section class="video">
-        <div><h1>Check out our Video:</h1></div>
-        <div><video src=""></video></div>
+      <div><h1>Check out our Video:</h1></div>
+      <div><video src=""></video></div>
     </section>
-        <section id="offer" class="section 5">
-        <h2>What we offer</h2>
-        <p class="subtitle">Short-stay and long-stay pet hotel: from a few hours to several weeks. <br><span class="subtitle-two">Safe Clean Supervised</span></p>
-        <div class="services">
-            <h3>Our servises</h3>
-            <ul>
-                <li>
-                <figure class="service-card">
-                    <figcaption class="servise-title">Daycare & Overnight boarding</figcaption>
-                    <div class="circle">🦦</div>
-                </figure>
-                </li>
-                <li>
-                <figure class="service-card">
-                    <figcaption class="servise-title">Transport & Quarantine support</figcaption>
-                    <div class="circle">🚕</div>
-                </figure>
-                </li>
-                <li>
-                <figure class="service-card">
-                    <figcaption class="servise-title">Playtime & Socialization</figcaption>
-                    <div class="circle">🏐</div>
-                </figure>
-                </li>
-                <li>
-                <figure class="service-card">
-                    <figcaption class="servise-title">Medication Administration</figcaption>
-                    <div class="circle">🚑</div>
-                </figure>
-                </li>
-                <li>
-                <figure class="service-card">
-                    <figcaption class="servise-title">Grooming & Basic care</figcaption>
-                    <div class="circle">✄</div>
-                </figure>
-                </li>
-                <li>
-                <figure class="service-card">
-                    <figcaption class="servise-title">Training</figcaption>
-                    <div class="circle">🏅</div>
-                </figure>
-                </li>
-            </ul>
-        </div>
-    </section>
-        <section id="why-us" class="section">
-        <h2>Why choose us?</h2>
-        <ul class="why-list">
-            <li class="why-card">
-            <img src="images/online-booking.jpg" alt="Online booking" class="why-img">
-            <div class="why-text">
-                <h3>Online booking</h3>
-                <p>Book and manage services anytime through our website or mobile app.</p>
-            </div>
-            </li>
-
-            <li class="why-card">
-            <img src="images/flexible-feeding.jpg" alt="Flexible feeding" class="why-img">
-            <div class="why-text">
-                <h3>Flexible feeding</h3>
-                <p>Choose between standard or natural BARF nutrition, tailored to your pet’s needs.</p>
-            </div>
-            </li>
-
-            <li class="why-card">
-            <img src="images/monitoring.jpg" alt="24/7 monitoring" class="why-img">
-            <div class="why-text">
-                <h3>24/7 monitoring</h3>
-                <p>Round-the-clock care and live camera access for owners.</p>
-            </div>
-            </li>
-
-            <li class="why-card">
-            <img src="images/care-plans.jpg" alt="Individual care plans" class="why-img">
-            <div class="why-text">
-                <h3>Individual care plans</h3>
-                <p>Special programs for puppies, seniors, and pets with medical conditions.</p>
-            </div>
-            </li>
-
-            <li class="why-card">
-            <img src="images/pickup.jpg" alt="Pick-up & Drop-off" class="why-img">
-            <div class="why-text">
-                <h3>Pick-up & Drop-off</h3>
-                <p>Convenient transport service to bring your pet safely to and from the hotel.</p>
-            </div>
-            </li>
-
-            <li class="why-card">
-            <img src="images/emergency.jpg" alt="Emergency support" class="why-img">
-            <div class="why-text">
-                <h3>Emergency support</h3>
-                <p>Cooperation with veterinary clinics to provide immediate medical help if needed.</p>
-            </div>
-            </li>
+    <section id="offer" class="section 5">
+      <h2>What we offer</h2>
+      <p class="subtitle">
+        Short-stay and long-stay pet hotel: from a few hours to several weeks.
+        <br /><span class="subtitle-two">Safe Clean Supervised</span>
+      </p>
+      <div class="services">
+        <h3>Our servises</h3>
+        <ul>
+          <li>
+            <figure class="service-card">
+              <figcaption class="servise-title">
+                Daycare & Overnight boarding
+              </figcaption>
+              <div class="circle">🦦</div>
+            </figure>
+          </li>
+          <li>
+            <figure class="service-card">
+              <figcaption class="servise-title">
+                Transport & Quarantine support
+              </figcaption>
+              <div class="circle">🚕</div>
+            </figure>
+          </li>
+          <li>
+            <figure class="service-card">
+              <figcaption class="servise-title">
+                Playtime & Socialization
+              </figcaption>
+              <div class="circle">🏐</div>
+            </figure>
+          </li>
+          <li>
+            <figure class="service-card">
+              <figcaption class="servise-title">
+                Medication Administration
+              </figcaption>
+              <div class="circle">🚑</div>
+            </figure>
+          </li>
+          <li>
+            <figure class="service-card">
+              <figcaption class="servise-title">
+                Grooming & Basic care
+              </figcaption>
+              <div class="circle">✄</div>
+            </figure>
+          </li>
+          <li>
+            <figure class="service-card">
+              <figcaption class="servise-title">Training</figcaption>
+              <div class="circle">🏅</div>
+            </figure>
+          </li>
         </ul>
-     </section>
-     <section id="discounts" class="section">
-        <h2>Special discounts for bundled services</h2>
-        <div class="discounts-grid">
-
-            <div class="discount-card">
-                <img src="images/discount1.jpg" alt="Bundle A">
-                <div class="slab">
-                    <div class="price">$15</div>
-                    <div class="features">Trial: daycare + grooming</div>
-                </div>
-            </div>
-
-            <div class="discount-card">
-                <img src="images/discount2.jpg" alt="Bundle B">
-                <div class="slab">
-                    <div class="price">$49</div>
-                    <div class="features">Monthly: feeding + monitoring</div>
-                </div>
-            </div>
-
-            <div class="discount-card">
-                <img src="images/discount3.jpg" alt="Bundle C">
-                <div class="slab">
-                    <div class="price">$9</div>
-                    <div class="features">Hotel + vet + 24/7 support</div>
-                </div>
-            </div>
-
-        </div>
+      </div>
     </section>
-</body>
-    <footer>
+    <section id="why-us" class="section">
+      <h2>Why choose us?</h2>
+      <ul class="why-list">
+        <li class="why-card">
+          <img
+            src="images/online-booking.jpg"
+            alt="Online booking"
+            class="why-img"
+          />
+          <div class="why-text">
+            <h3>Online booking</h3>
+            <p>
+              Book and manage services anytime through our website or mobile
+              app.
+            </p>
+          </div>
+        </li>
+
+        <li class="why-card">
+          <img
+            src="images/flexible-feeding.jpg"
+            alt="Flexible feeding"
+            class="why-img"
+          />
+          <div class="why-text">
+            <h3>Flexible feeding</h3>
+            <p>
+              Choose between standard or natural BARF nutrition, tailored to
+              your pet’s needs.
+            </p>
+          </div>
+        </li>
+
+        <li class="why-card">
+          <img
+            src="images/monitoring.jpg"
+            alt="24/7 monitoring"
+            class="why-img"
+          />
+          <div class="why-text">
+            <h3>24/7 monitoring</h3>
+            <p>Round-the-clock care and live camera access for owners.</p>
+          </div>
+        </li>
+
+        <li class="why-card">
+          <img
+            src="images/care-plans.jpg"
+            alt="Individual care plans"
+            class="why-img"
+          />
+          <div class="why-text">
+            <h3>Individual care plans</h3>
+            <p>
+              Special programs for puppies, seniors, and pets with medical
+              conditions.
+            </p>
+          </div>
+        </li>
+
+        <li class="why-card">
+          <img
+            src="images/pickup.jpg"
+            alt="Pick-up & Drop-off"
+            class="why-img"
+          />
+          <div class="why-text">
+            <h3>Pick-up & Drop-off</h3>
+            <p>
+              Convenient transport service to bring your pet safely to and from
+              the hotel.
+            </p>
+          </div>
+        </li>
+
+        <li class="why-card">
+          <img
+            src="images/emergency.jpg"
+            alt="Emergency support"
+            class="why-img"
+          />
+          <div class="why-text">
+            <h3>Emergency support</h3>
+            <p>
+              Cooperation with veterinary clinics to provide immediate medical
+              help if needed.
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section id="discounts" class="section">
+      <h2>Special discounts for bundled services</h2>
+      <div class="discounts-grid">
+        <div class="discount-card">
+          <img src="images/discount1.jpg" alt="Bundle A" />
+          <div class="slab">
+            <div class="price">$15</div>
+            <div class="features">Trial: daycare + grooming</div>
+          </div>
+        </div>
+
+        <div class="discount-card">
+          <img src="images/discount2.jpg" alt="Bundle B" />
+          <div class="slab">
+            <div class="price">$49</div>
+            <div class="features">Monthly: feeding + monitoring</div>
+          </div>
+        </div>
+
+        <div class="discount-card">
+          <img src="images/discount3.jpg" alt="Bundle C" />
+          <div class="slab">
+            <div class="price">$9</div>
+            <div class="features">Hotel + vet + 24/7 support</div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+  <footer>
     &copy; 2025 PAWTEL Pet Hotel.
     <a href="#privacy">Privacy Policy</a>
   </footer>
 </html>
-
-
