--- a/index.html
+++ b/index.html
@@ -231,7 +231,21 @@
     </section>
   </body>
   <footer>
-    &copy; 2025 PAWTEL Pet Hotel.
-    <a href="#privacy">Privacy Policy</a>
+    <h2>Your product</h2>
+
+    <nav class="nav_foot">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Prices</a></li>
+      </ul>
+    </nav>
+
+    <div class="social-icons">
+      <button class="social-btn">FB</button>
+      <button class="social-btn">IG</button>
+      <button class="social-btn">YT</button>
+      <button class="social-btn">LI</button>
+    </div>
   </footer>
 </html>
