oksana, all my blocks with photos

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <figcaption class="servise-title">
                 Daycare & Overnight boarding
               </figcaption>
-              <div class="circle">🦦</div>
+              <div class="circle"><img src="https://plus.unsplash.com/premium_photo-1724834056013-76c09a1f80b2?q=80&w=996&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pawpic"></div>
             </figure>
           </li>
           <li>
@@ -74,7 +74,7 @@
               <figcaption class="servise-title">
                 Transport & Quarantine support
               </figcaption>
-              <div class="circle">🚕</div>
+              <div class="circle"><img src="https://plus.unsplash.com/premium_photo-1661425813953-5ebf4b53fa03?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pawpic"></div>
             </figure>
           </li>
           <li>
@@ -82,7 +82,7 @@
               <figcaption class="servise-title">
                 Playtime & Socialization
               </figcaption>
-              <div class="circle">🏐</div>
+              <div class="circle"><img src="https://images.unsplash.com/photo-1638720340715-d8097a58cdf1?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pawpic"></div>
             </figure>
           </li>
           <li>
@@ -90,7 +90,7 @@
               <figcaption class="servise-title">
                 Medication Administration
               </figcaption>
-              <div class="circle">🚑</div>
+              <div class="circle"><img src="https://plus.unsplash.com/premium_photo-1664298612087-e0d5cc1981ed?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pawpic"></div>
             </figure>
           </li>
           <li>
@@ -98,13 +98,13 @@
               <figcaption class="servise-title">
                 Grooming & Basic care
               </figcaption>
-              <div class="circle">✄</div>
+              <div class="circle"><img src="https://images.unsplash.com/photo-1611173622933-91942d394b04?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pawpic"></div>
             </figure>
           </li>
           <li>
             <figure class="service-card">
               <figcaption class="servise-title">Training</figcaption>
-              <div class="circle">🏅</div>
+              <div class="circle"><img src="https://plus.unsplash.com/premium_photo-1686523494944-ca32cb8ea852?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pawpic"></div>
             </figure>
           </li>
         </ul>
@@ -114,26 +114,21 @@
       <h2>Why choose us?</h2>
       <ul class="why-list">
         <li class="why-card">
-          <img
-            src="images/online-booking.jpg"
-            alt="Online booking"
-            class="why-img"
-          />
+          <img class="why-img"
+            src="https://images.unsplash.com/photo-1488509082528-cefbba5ad692?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Online booking" alt="onlinebooking">
           <div class="why-text">
             <h3>Online booking</h3>
-            <p>
-              Book and manage services anytime through our website or mobile
+            <p>Book and manage services anytime through our website or mobile
               app.
             </p>
           </div>
         </li>
 
         <li class="why-card">
-          <img
-            src="images/flexible-feeding.jpg"
-            alt="Flexible feeding"
-            class="why-img"
-          />
+          <img class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1726761692986-6bcde87fc2b8?q=80&w=3201&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3Dg"
+            alt="Flexible feeding">
           <div class="why-text">
             <h3>Flexible feeding</h3>
             <p>
@@ -144,11 +139,9 @@
         </li>
 
         <li class="why-card">
-          <img
-            src="images/monitoring.jpg"
-            alt="24/7 monitoring"
-            class="why-img"
-          />
+          <img class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1666278379770-440439b08656?q=80&w=3088&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="24/7 monitoring">
           <div class="why-text">
             <h3>24/7 monitoring</h3>
             <p>Round-the-clock care and live camera access for owners.</p>
@@ -156,11 +149,9 @@
         </li>
 
         <li class="why-card">
-          <img
-            src="images/care-plans.jpg"
-            alt="Individual care plans"
-            class="why-img"
-          />
+          <img class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1663040477032-0cb4ee5402bc?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Individual care plans">
           <div class="why-text">
             <h3>Individual care plans</h3>
             <p>
@@ -171,11 +162,9 @@
         </li>
 
         <li class="why-card">
-          <img
-            src="images/pickup.jpg"
-            alt="Pick-up & Drop-off"
-            class="why-img"
-          />
+          <img class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1664095841142-5e20a480df4f?q=80&w=1742&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Pick-up & Drop-off">
           <div class="why-text">
             <h3>Pick-up & Drop-off</h3>
             <p>
@@ -186,11 +175,9 @@
         </li>
 
         <li class="why-card">
-          <img
-            src="images/emergency.jpg"
-            alt="Emergency support"
-            class="why-img"
-          />
+          <img class="why-img"
+            src="https://images.unsplash.com/photo-1612574935301-af13ccce9258?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Emergency support">
           <div class="why-text">
             <h3>Emergency support</h3>
             <p>
@@ -205,7 +192,7 @@
       <h2>Special discounts for bundled services</h2>
       <div class="discounts-grid">
         <div class="discount-card">
-          <img src="images/discount1.jpg" alt="Bundle A" />
+          <img src="https://plus.unsplash.com/premium_photo-1671737775556-5d2b4dba7bac?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bundle A">
           <div class="slab">
             <div class="price">$15</div>
             <div class="features">Trial: daycare + grooming</div>
@@ -213,7 +200,7 @@
         </div>
 
         <div class="discount-card">
-          <img src="images/discount2.jpg" alt="Bundle B" />
+          <img src="https://plus.unsplash.com/premium_photo-1680196763896-581c800f6784?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bundle B">
           <div class="slab">
             <div class="price">$49</div>
             <div class="features">Monthly: feeding + monitoring</div>
@@ -221,7 +208,7 @@
         </div>
 
         <div class="discount-card">
-          <img src="images/discount3.jpg" alt="Bundle C" />
+          <img src="https://plus.unsplash.com/premium_photo-1681181262647-7284f2f8908d?q=80&w=1734&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bundle C">
           <div class="slab">
             <div class="price">$9</div>
             <div class="features">Hotel + vet + 24/7 support</div>
